flux-snapshot/2023-04-20-22-13-20-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0658]: `let` expressions in this position are unstable
  --> src/sort.rs:72:37
   |
72 |     if unsorted_slice.len() == 1 && let Some(k) = unsorted_slice.get(0) {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable

error[E0308]: mismatched types
  --> src/sort.rs:73:33
   |
73 |         return SortedList::Cons(k, Box::new(SortedList::Nil));
   |                ---------------- ^ expected `i32`, found `&i32`
   |                |
   |                arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> src/sort.rs:13:5
   |
13 |     Cons(i32, Box<SortedList>)
   |     ^^^^
help: consider dereferencing the borrow
   |
73 |         return SortedList::Cons(*k, Box::new(SortedList::Nil));
   |                                 +

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `sorting` (bin "sorting") due to 2 previous errors
